<resources>
    <string name="app_name">Goods Collection</string>
    <string name="storeman_label">Storeman</string>
    <string name="store_choice">Chose store</string>
    <string name="storeman_number_tts">Enter storeman number, press Enter</string>
    <string name="exit">Exit</string>
    <string name="ok" translatable="false">OK</string>
    <string name="group1">Move</string>
    <string name="group2">Realisation</string>
    <string name="group3">Realisation 2</string>
    <string name="refresh">Refresh</string>
    <string name="warehouse">Warehouse</string>
    <string name="printer">Printer</string>
    <string name="print_label">Print label</string>
    <string name="printer_choice">Chose printer</string>
    <string name="positions"> positions </string>
    <string name="mins"> min </string>
    <string name="start">Start</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="scan_nearby">Scan nearby cell</string>
    <string name="cell">Cell</string>
    <string name="enter_again">Enter again</string>
    <string name="force_upload">Go to WiFi zone and press Upload</string>
    <string name="picking">Goods picking</string>
    <string name="qty">Quantity</string>
    <string name="remain">Remain, </string>
    <string name="urgent">Urgent </string>
    <string name="skip">Skip</string>
    <string name="finish_picking">Finish picking</string>
    <string name="pick">Pick</string>
    <string name="remain_of"> of </string>
    <string name="dump_cell">Scan dump cell</string>
    <string name="excessive_goods">Pick excessive goods</string>
    <string name="wrong_barcode">Wrong barcode</string>
    <string name="picked">Picked, </string>
    <string name="total">Total, </string>
    <string name="break_picking">Break picking</string>
    <string name="lower_goods">Pick lower goods</string>
    <string name="confirm_lower_goods">Confirm lower goods</string>
    <string name="confirm_excessive_goods">Confirm excessive goods</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ent_number">Enter number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="unuploaded_goods">Goods collected but not uploaded</string>
    <string name="dump">Dump</string>
    <string name="delete">Delete</string>
    <string name="dct_num">DCT number</string>
    <string name="start1">Start work</string>
    <string name="goods_deficiency">Goods deficiency</string>
    <string name="continue_pick">Continue</string>
    <string name="finish_picking_msg">Scan or enter dump cell for finish</string>
    <string name="finish_picking_msg2">or press continue button</string>
    <string name="confirm_skip">Confirm skip goods</string>
    <string name="confirm_deficiency">Confirm goods deficiency</string>
    <string name="confirm_finish_picking">Confirm finish picking</string>
    <string name="finish_picking_tts1">Picking group </string>
    <string name="finish_picking_tts2"> finished</string>
    <string name="start_cell">Enter start cell</string>
    <string name="picked_tts">Picked</string>
    <string name="no_connection">Connect error</string>
    <string name="dump_for_packing">Dump goods for packing</string>
    <string name="qnt_labels">Labels quantity</string>
    <string name="goods_in_label">Goods quantity</string>
    <string name="adb_label">Label</string>
    <string name="small_piece_goods">Small-piece goods</string>
    <string name="goods_photo">Photo</string>
    <string name="no_photo">No photo</string>
    <string name="sd_card_error">SD card write error</string>
    <string name="no_sd_card">Insert SD card</string>
    <string name="all_clients">All</string>
    <string name="adb_picked">Picked goods</string>
    <string name="current_position">Current position</string>
    <string name="start_cell_label">Enter start cell nn.nnn</string>
    <string name="pick_mode">Pick mode</string>
    <string name="separate">Separate</string>
    <string name="united">United</string>
    <string name="cancel">Cancel</string>
</resources>