<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/print_item"
        app:showAsAction="ifRoom"
        android:title="@string/print_label"  />
    <item android:id="@+id/refresh_item"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"  />
    <item android:id="@+id/photo_item"
        app:showAsAction="never"
        android:title="@string/goods_photo"  />
    <item android:id="@+id/warehouse_item"
        app:showAsAction="never"
        android:title="@string/warehouse"  />
    <item android:id="@+id/dct_num_item"
        app:showAsAction="never"
        android:title="@string/dct_num" />
    <item
        android:id="@+id/printer_item"
        app:showAsAction="ifRoom"
        android:title="@string/printer" />
    <item
        android:id="@+id/small_piece"
        app:showAsAction="never"
        android:title="@string/small_piece_goods" />
    <item
        android:id="@+id/picked_goods"
        app:showAsAction="never"
        android:title="@string/adb_picked" />
    <item
        android:id="@+id/position"
        android:title="@string/current_position"
        app:showAsAction="never" />
    <item
        android:id="@+id/pick_mode"
        android:title="@string/pick_mode" />
</menu>
