<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishPickingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:text="@string/finish_picking_msg"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:text="@string/finish_picking_msg2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:text="@string/cell"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:id="@+id/et_dump_cell"/>
    </LinearLayout>
    <Button
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="4dp"
        android:text="@string/continue_pick" />
</LinearLayout>