<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".PickedFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unuploaded_goods"
        android:layout_weight="0.5"
        android:textSize="20sp"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/lv_goodslist"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:text="@string/cell"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_height="match_parent"
            android:id="@+id/et_dump_cell"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_dump"
            android:layout_margin="4dp"
            android:text="@string/dump"/>
        <Button
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>