<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".GoodsPickingFragment">
    <WebView
        android:id="@+id/photo_view"
        android:visibility="gone"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </WebView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tv_picking_title"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tv_article"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/tv_goods_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/tv_brand"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_cell"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:text="@string/cell"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:id="@+id/tv_cell"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_qty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:id="@+id/label_picked"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:text="@string/picked"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:id="@+id/et_pick_qty"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_total"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:id="@+id/label_total"
            android:layout_weight="2"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:text="@string/total"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:id="@+id/tv_goods_total"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_buttons"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/bt_break"
            android:layout_margin="4dp"
            android:text="@string/break_picking"/>
        <Button
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/bt_skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/skip" />
        <Button

            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/bt_deficiency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/goods_deficiency" />
    </LinearLayout>
</LinearLayout>